[package]
name = "snap"
version = "0.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A pure Rust implementation of the Snappy compression algorithm. Includes
streaming compression and decompression.
"""
documentation = "http://burntsushi.net/rustdoc/snap/"
homepage = "https://github.com/BurntSushi/snap"
repository = "https://github.com/BurntSushi/snap"
readme = "README.md"
keywords = ["snappy", "compress", "compression", "decompress", "decompression"]
license = "BSD-3-Clause"

[lib]
bench = false

[dependencies]
byteorder = "0.5.3"

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3"
snappy-cpp = { path = "snappy-cpp", version = "0.1" }

[profile.release]
debug = true

[profile.test]
opt-level = 3
