[package]
name = "snap"
version = "0.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A pure Rust implementation of the Snappy compression algorithm. Includes
streaming compression and decompression.
"""
documentation = "https://docs.rs/snap"
homepage = "https://github.com/BurntSushi/rust-snappy"
repository = "https://github.com/BurntSushi/rust-snappy"
readme = "README.md"
keywords = ["snappy", "compress", "compression", "decompress", "decompression"]
license = "BSD-3-Clause"

[lib]
bench = false

[[bench]]
name = "bench"

[dependencies]
byteorder = "1"
lazy_static = "0.2"
snappy-cpp = { path = "snappy-cpp", version = "0.1", optional = true }

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"

[features]
cpp = ["snappy-cpp"]

[profile.release]
debug = true

[profile.test]
opt-level = 3
