[package]
publish = false
name = "snappy-benchmark"
version = "0.1.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense/MIT"
repository = "https://github.com/BurntSushi/snap"
documentation = "http://burntsushi.net/rustdoc/snap/"
homepage = "https://github.com/BurntSushi/snap"
description = "Snappy benchmarks for Rust's and other implementations."

[dependencies]
lazy_static = "0.2"
snap = { path = "..", version = "0.1" }
snappy-cpp = { path = "../snappy-cpp", version = "0.1", optional = true }

[[bench]]
name = "bench"
path = "src/bench.rs"
test = false
bench = true

[features]
rust = []
cpp = ["snappy-cpp"]

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
debug = true
