[package]
name = "snap-bin"
version = "0.1.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast command line tool for snappy compression and decompression.
"""
documentation = "http://burntsushi.net/rustdoc/snap/"
homepage = "https://github.com/BurntSushi/snap"
repository = "https://github.com/BurntSushi/snap"
keywords = ["snappy", "compress", "compression", "decompress", "decompression"]
license = "Unlicense/MIT"

[[bin]]
name = "snappy"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
snap = { path = "..", version = "0.1" }

[profile.release]
debug = true
