[package]
publish = false
name = "snappy-cpp"
version = "0.1.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
license = "Unlicense/MIT"
repository = "https://github.com/BurntSushi/snap"
documentation = "http://burntsushi.net/rustdoc/snap/"
homepage = "https://github.com/BurntSushi/snap"
description = "Simple Snappy C++ bindings for testing and benchmarking."
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
