[package]
name = "szip"
version = "0.1.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast command line tool for snappy compression and decompression.
"""
documentation = "https://docs.rs/snap"
homepage = "https://github.com/BurntSushi/rust-snappy"
repository = "https://github.com/BurntSushi/rust-snappy"
keywords = ["snappy", "compress", "compression", "decompress", "decompression"]
license = "BSD-3-Clause"
edition = "2018"

[[bin]]
name = "szip"
path = "main.rs"

[dependencies]
filetime = "0.2.8"
snap = { path = "..", version = "0.2" }

[dependencies.clap]
version = "2.33.0"
default-features = false
