[package]
name = "szip"
version = "1.0.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast command line tool for snappy compression and decompression.
"""
documentation = "https://docs.rs/snap"
homepage = "https://github.com/BurntSushi/rust-snappy/tree/master/szip"
repository = "https://github.com/BurntSushi/rust-snappy/tree/master/szip"
keywords = ["snappy", "compression", "decompression", "cli", "zip"]
license = "BSD-3-Clause"
edition = "2018"

[[bin]]
name = "szip"
path = "main.rs"

[dependencies]
anyhow = "1.0.26"
filetime = "0.2.8"
snap = { path = "..", version = "1.0.0" }

[dependencies.clap]
version = "2.33.0"
default-features = false
